@@ -1,3 +1,9 @@
+2013-01-16  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/54767
+	PR tree-optimization/53465
+	* gfortran.fortran-torture/execute/pr54767.f90: New testcase.
+
 2013-01-16  Christian Bruel  <christian.bruel@st.com>
 
 	PR target/55301
